# StoryShell

./: README.md  pyproject.toml
docs/development/: agent-progress.md  storyshell-scaffold-plan.md
docs/testing/: linux-alpha-smoke.md
examples/alpha-smoke-package/: README.md
examples/alpha-smoke-package/stories/lantern-cellar/: manifest.json
examples/alpha-smoke-package/stories/lantern-cellar/canon/: world.md
examples/alpha-smoke-package/stories/lantern-cellar/canon/characters/: caretaker.md
examples/alpha-smoke-package/stories/lantern-cellar/canon/scenes/: cellar-door.md
examples/alpha-smoke-package/stories/lantern-cellar/state/: initial.json
openclaw/: README.md
openclaw/agents/story-author/: AGENTS.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md
openclaw/agents/story-director/: AGENTS.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md
openclaw/agents/story-main/: AGENTS.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md
openclaw/config/: story-author-agent.json5  story-director-agent.json5  story-main-agent.json5
openclaw/scripts/: install_storyshell_stack.py  sync_storyshell_stack.py
openclaw/skills/story-authoring/: SKILL.md
openclaw/skills/story-routing/: SKILL.md
openclaw/skills/story-runtime/: SKILL.md
openclaw/skills/story-state/: SKILL.md
scripts/: storyshell_state_tool.py  validate_storyshell_package.py
src/storyshell/: __init__.py  openclaw_storyshell_stack.py
tests/: test_openclaw_storyshell_stack.py
